# solver-juliobonifaz

./: CMakeLists.txt
operations/: operation.cpp  operation.h
